compiler/testData/diagnostics/tests/testsWithJava21/newListMethods.diag.txt
/newListMethods.kt:30:7: error: unresolved reference: getFirst
    x.getFirst()
      ^^^^^^^^
/newListMethods.kt:31:7: error: function invocation 'first()' expected
    x.first // synthetic property for getFirst()
      ^^^^^
/newListMethods.kt:33:7: error: unresolved reference: getLast
    x.getLast()
      ^^^^^^^
/newListMethods.kt:34:7: error: function invocation 'last()' expected
    x.last
      ^^^^
